Fix legacy Forge jar compatibility